# drifter

./: .gitignore  Cargo.toml  LICENSE  README.md  feedback.md
.github/workflows/: pr-check.yml  release.yml  test.yml
benches/: db_bench.rs  path_bench.rs
docker/: docker-compose.yml
reports/: scan_report_298ed55f-d103-46cd-a3c3-c2874aad9e1f.json  scan_report_298ed55f-d103-46cd-a3c3-c2874aad9e1f.txt  scan_report_58a0159e-fd63-4aae-a2d4-eaa1c074181c.json  scan_report_58a0159e-fd63-4aae-a2d4-eaa1c074181c.txt  scan_report_62c2a4a0-c469-462c-8532-0bad6e784c15.json  scan_report_62c2a4a0-c469-462c-8532-0bad6e784c15.txt  scan_report_6c7a58f4-c537-4f3c-b927-72cf8333ec22.json  scan_report_6c7a58f4-c537-4f3c-b927-72cf8333ec22.txt
src/: config.rs  coordinator.rs  db.rs  ingest.rs  lib.rs  logging.rs  main.rs  metrics.rs  scanner.rs  state.rs  theme.rs  tui.rs  uploader.rs  utils.rs  watch.rs
src/app/: settings.rs  state.rs
src/components/: file_picker.rs  mod.rs  wizard.rs
src/core/: config.rs  metrics.rs  mod.rs  transfer.rs
src/services/: ingest.rs  log_watcher.rs  mod.rs  reporter.rs  scanner.rs  uploader.rs  watch.rs
src/tui/: helpers.rs
src/ui/: key_hints.rs  logs.rs  mod.rs  remote.rs  render.rs  theme.rs  util.rs
tests/: integration_tests.rs  stress_tests.rs  ui_tests.rs
tests/snapshots/: ui_tests__catppuccin_frappe_theme.snap  ui_tests__catppuccin_latte_theme.snap  ui_tests__catppuccin_macchiato_theme.snap  ui_tests__confirmation_modal.snap  ui_tests__filter_mode_active.snap  ui_tests__history_with_items.snap  ui_tests__job_with_error.snap  ui_tests__layout_adjustment_overlay.snap  ui_tests__logs_view.snap  ui_tests__nord_theme.snap  ui_tests__quarantine_view_empty.snap  ui_tests__quarantine_view_with_threats.snap  ui_tests__quit_confirmation_modal.snap  ui_tests__remote_browsing_hints.snap  ui_tests__remote_delete_folder_confirmation.snap  ui_tests__remote_folder_create_modal.snap  ui_tests__remote_panel_with_objects.snap  ui_tests__rose_pine_moon_theme.snap  ui_tests__settings_view.snap  ui_tests__staged_files_selected.snap  ui_tests__transfers_view_empty.snap  ui_tests__transfers_view_with_jobs.snap  ui_tests__tree_view_mode.snap  ui_tests__wizard_view.snap
