[package]
name = "drifter"
version = "0.1.8"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = "1.1.10"
aws-sdk-s3 = "1.16.0"
bytes = "1.6"
chrono = "0.4"
clamav-client = "2.2.0"
crossterm = "0.27"
directories = "5.0"
hex = "0.4"
notify = "8.2.0"
ratatui = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
toml = "0.8"
sysinfo = "0.32"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
sha2 = "0.10"
base64 = "0.22"
futures = "0.3"
async-stream = "0.3"
hyper = { version = "0.14", features = ["stream"] }
uuid = { version = "1.20.0", features = ["v4"] }
